[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo_scenes/actors/PhysicsCube.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.2, 0.2 )

[node name="PhysicsCube" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null
[connection signal="grabbability_changed" from="." to="." method="_on_PhysicsCube_grabbability_changed"]
[connection signal="grabbed" from="." to="." method="_on_PhysicsCube_grabbed"]
[connection signal="released" from="." to="." method="_on_PhysicsCube_released"]
